--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Thank you for visiting Deana Johnson Design.</h1>
-    <p>We are currently busy helping clients with their projects. We hope to feature our work on here soon.</p>
+    <p>We are currently busy helping clients with their projects. We hope to feature our work soon.</p>
 </body>
 </html>
