--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Thank you for visiting Deana Johnson Design.</h1>
     <p>We are currently busy helping clients with their projects. We hope to feature our work soon.</p>
     <div class="image-container">
-        <img src="photos/livingroom.jpeg" alt="Living Room">
+        <img src="photos/interior1.jpeg" alt="Living Room">
     </div>
 </body>
 </html>
