--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
-			<div id="interior1"></div>
+			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
 
