--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright">&copy; DJ Design</span>
+						<span class="copyright">&copy; 2024 DJ Design</span>
 					</footer>
 
 			</div>
