--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 						<p>Interiors &nbsp;&bull;&nbsp; Consulting &nbsp;&bull;&nbsp; Space planning</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.instagram.com/deenajohnsondesign/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href=mailto:"dj@deenajohnsondesign.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
