--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.instagram.com/deenajohnsondesign/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href=mailto:"dj@deenajohnsondesign.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href=mailto:dj@deenajohnsondesign.com class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</nav>
 					</header>
